Fix spacing in daily sleep container

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -79,6 +79,7 @@ main {
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
+  margin-left: 40px;
 }
 
 .weekly-water {
@@ -157,6 +158,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 15px;
 }
 
 .text-under-number {
